UPDATE limit JVM memory usage, lightweight base container